<resources>
    <string name="app_name">Belgium Quizz</string>
    <string name="quizName">What do you know about Belgium ?</string>
    <string name="startButtonText">Start</string>
    <string name="question_1">Question 1: Which flag is the flag of Belgium?</string>
    <string name="question_2">Question 2: What is this monument?</string>
    <string name="the_atomium">The Atomium</string>
    <string name="the_eiffel_tower">The Eiffel Tower</string>
    <string name="the_coliseum">The Coliseum</string>
    <string name="big_ben_tower">Big Ben Tower</string>
    <string name="question_3">Question 3: What is the name of this statue?</string>
    <string name="statue_name">Statue name</string>
    <string name="question_4">Question 4: Which languages do we speak in Belgium?</string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="dutch">Dutch</string>
    <string name="german">German</string>
    <string name="italian">Italian</string>
    <string name="question_5">Question 5: What famous junk food do we eat in Belgium?</string>
    <string name="junk_food_name">Junk food name</string>
    <string name="question_6">Question 6: How many Trappist beers are there in Belgium?</string>
    <string name="value_1">1</string>
    <string name="decrement">-</string>
    <string name="increment">+</string>
    <string name="question_7">Question 7: Among the following, who did not reign over Belgium?</string>
    <string name="albert_two">Albert II</string>
    <string name="baudouin">Baudouin</string>
    <string name="leopold_first">Leopold I</string>
    <string name="philippe">Philippe</string>
    <string name="elisabeth">Elisabeth</string>
    <string name="leopold_third">Leopold III</string>
    <string name="question_8">Question 8: When did the kingdom of Belgium obtain its independency?</string>
    <string name="date_1762">1762</string>
    <string name="date_1920">1920</string>
    <string name="date_1830">1830</string>
    <string name="date_1492">1492</string>
    <string name="question_9">Question 9: Belgium is split into the Walloons and the Flemish. How are they geographically distributed?</string>
    <string name="wal_no_fle_so">The Walloons in the North, the Flemish in the South</string>
    <string name="wal_so_fle_no">The Walloons in the South, the Flemish in the North</string>
    <string name="wal_we_fle_ea">The Walloons in the West, the Flemish in the East</string>
    <string name="wal_ea_fle_we">The Walloons in the East, the Flemish in the West</string>
    <string name="question_10">Question 10: Which famous actress was born in Ixelles, Brussels?</string>
    <string name="marilyn_monroe">Marilyn Monroe</string>
    <string name="audrey_hepburn">Audrey Hepburn</string>
    <string name="judy_garland">Judy Garland</string>
    <string name="jully_andrews">Jully Andrews</string>
    <string name="submit">Submit</string>
    <string name="retry">retry</string>
    <string name="answer_q_one">The national flag of Belgium is a tricolour of three bands of black, yellow, and red. The colours were taken from the coat of arms of the Duchy of Brabant, and the vertical design may be based on the flag of France.</string>
    <string name="answer_q_two">The Atomium is a building in Brussels originally constructed for Expo 58, the 1958 Brussels World\'s Fair. Designed by the engineer André Waterkeyn and architects André and Jean Polak, it stands 102 m (335 ft) tall. Its nine 18 m (60 ft) diameter stainless steel clad spheres are connected so that the whole forms the shape of a unit cell of an iron crystal magnified 165 billion times. It is now a museum.</string>
    <string name="answer_q_three">Manneken Pis (meaning \'Little man Pee\' in Dutch) is a landmark small bronze sculpture (61 cm) in Brussels, depicting a naked little boy urinating into a fountain\'s basin.</string>
    <string name="answer_q_four">Belgium has three official languages: Dutch, French and German.</string>
    <string name="answer_q_five">Contrary to their name, French Fries are claimed to have originated in Belgium, although their exact place of origin is uncertain.</string>
    <string name="answer_q_six">There are six Trappist beers brewed in Belgium: Achel, Chimay, Orval, Rochefort, Westvleteren, and Westmalle.</string>
    <string name="answer_q_seven">The right answer was Elisabeth. Althougt Elisabeth, daughter of King Philippe, is to be the next (and first female) sovereign of Belgians.</string>
    <string name="answer_q_eight">It was in 1830 after the Belgian revolution. It was the conflict which led to the secession of the southern provinces (mainly the former Southern Netherlands) from the United Kingdom of the Netherlands and established an independent Kingdom of Belgium.</string>
    <string name="answer_q_nine">In fact, the territory of Belgium is divided into three Regions, two of which, the Flemish Region (North) and Walloon Region (South), are in turn subdivided into provinces. The third Region, the Brussels Capital Region, is neither a province nor a part of a province.</string>
    <string name="answer_q_ten">Audrey Hepburn was born on 4 May 1929 at number 48 Rue Keyenveld in Ixelles, a municipality in Brussels, Belgium.</string>
    <string name="the_arc_de_triomphe">The Arc de Triomphe</string>
    <string name="the_tower_of_pisa">The Tower of Pisa</string>
</resources>
